[package]
authors = ["chevdor <chevdor@gmail.com>"]
description = "srtool is cli allowing to control the srtool docker image"
edition = "2021"
homepage = "https://github.com/chevdor/subwasm"
keywords = ["wasm", "cli", "substrate", "blockchain", "runtime", "polkadot", "kusama"]
license = "MIT"
name = "srtool-cli"
readme = "README.md"
repository = "https://github.com/chevdor/srtool-cli"
version = "0.7.1"

[[bin]]
bench = false
name = "srtool"
path = "src/main.rs"
test = false

[dependencies]
assert_cmd = "2.0"
# Sticking with clap 3.0.0-beta-2 for now, see https://github.com/chevdor/srtool-cli/issues/15
clap = {version = "3.0", features = ["derive", "env", "unicode", "cargo"]}
ctrlc = "3.2"
env_logger = "0.9"
log = "0.4"
srtool-lib = {path = "../lib"}

[package.metadata.deb]
assets = [
  ["target/release/srtool", "usr/bin/", "755"],
]
copyright = "2021, Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
depends = "$auto"
extended-description = """\
A cli allowing to control the srtool docker image."""
license-file = ["LICENSE", "0"]
maintainer = "Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
priority = "optional"
section = "utility"
