[package]
description = "srtool is cli allowing to control the srtool docker image"
homepage = "https://github.com/chevdor/subwasm"
keywords = ["wasm", "cli", "runtime", "polkadot", "kusama"]
license = "MIT"
name = "srtool-cli"
readme = "../README.md"
repository = "https://github.com/chevdor/srtool-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
bench = false
name = "srtool"
path = "src/main.rs"
test = false

[dependencies]
clap = { version = "4.5.31", features = ["derive", "env", "unicode", "cargo"] }
ctrlc = "3.4.5"
env_logger = "0.11.6"
log = "0.4.26"
srtool-lib = { path = "../lib", version = "0" }
thiserror = "2.0.11"

[package.metadata.deb]
assets = [["target/release/srtool", "usr/bin/", "755"]]
copyright = "2021, Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
depends = "$auto"
extended-description = """\
A cli allowing to control the srtool docker image."""
license-file = ["LICENSE", "0"]
maintainer = "Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
priority = "optional"
section = "utility"

[dev-dependencies]
assert_cmd = "2.0.16"
