[package]
name = "srtool-lib"
version = "0.6.0"
authors = ["chevdor <chevdor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
semver = {version = "1.0", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.5.8"
ureq = "2.1"
