[package]
name = "srtool-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file = "LICENSE"
description = "Lib for srtool-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde_json = "1.0"
ureq = "2.5"
thiserror = "1.0"
